# Toy-Compiler-Frontend

./: .flake8  .gitignore  .pre-commit-config.yaml  Ast.py  Parser.py  README.md  _test.asm  action.py  calc.py  calc_app.py  calc_gen.py  calc_v2.json  calc_v2_gen.py  calc_v4.json  calc_v4.py  calc_v4_gen.py  cfg.py  compile.bat  goto.py  in  lang_def.py  lang_def_builder.py  lang_def_factory.py  main.asm  out  parseTree.py  parser.py  performanceProfiler.py  production_fn_register.py  pyproject.toml  ruff.toml  run_server.bat  runnasm.bat  scanner.py  server.py  simpleJavaCompiler.py  sql.py  temp.py  tree.py  typeDef.py
cfg_utils/: action.py  action_goto_builder.py  cfg.py  goto.py  lr1.py  lr1_automata.py  lr1_io.py  type_def.py
dfa_utils/: __init__.py  deterministic_finite_automata.py  finite_automata.py  finite_automata_node.py  finite_automata_set.py  nondeterministic_finite_automata.py  regex_operation.py
examples/: calc.py
io_utils/: __init__.py  from_json.py  to_json.py
lr1/: action.py  action_goto_builder.py  goto.py  lr1_io.py  lr1_item.py  lr1_itemset.py  lr1_itemset_automata.py
server_utils/: tree.py
simpleCalc/: CFG2  CFG3  CFG4  calc_action  calc_goto  typedef
simpleJava/: ifTest.sjava  rocketLaunch.sjava  simple.sjava  simpleJavaAction  simpleJavaCFG  simpleJavaGoto  test.sjava  typedef
simpleSQL/: SQL  sqltypedef
templates/: index.html  parse_result.html
tests/: conftest.py  test_finite_automata.py  test_finite_automata_set.py  test_langdef.py  test_lr1.py  test_scanner.py  test_transition.py
vis_utils/: __init__.py  tree.py
(+3 files in other folders)
