[project]
name = "compiler-front-end"
version = "0.1.0"
description = "Compiler front-end framework, built on min-DFA based regex engine, and LR(1) item set automata"
authors = ["med <medioqrity@gmail.com>"]
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
